--- a/Pipfile
+++ b/Pipfile
@@ -20,8 +20,12 @@ click = "*"
 click-log = "*"
 jupyterlab = "*"
 tpot = "*"
+pycaret = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.10"
+
+[pipenv]
+allow_prereleases = true
